# fotacos

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  Procfile.dev  RASPBERRY_PI_SETUP.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup_autostart.sh  setup_raspberry_pi.sh  sitemap.xml
.github/: copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
docs/: index.md  modules.md
modules/: index.html
public/picts/: .gitkeep
public/picts/thumbnails/: .gitkeep
search/: search_index.json
src/fotacos/: database.py  env.py  logging_config.py  main.py
src/fotacos/api/: __init__.py  app.py  server.py
src/fotacos/api/routes/: photos.py
src/fotacos/api/services/: images.py
src/fotacos/gui/: __init__.py  runner.py
src/fotacos/gui/ui/: EmptyState.qml  GalleryHeader.qml  GalleryView.qml  NavigationButton.qml  PhotoCounter.qml  PhotoGridItem.qml  PhotoSlide.qml  SlideshowView.qml  main.qml
src/fotacos/models/: __init__.py  photo.py
src/fotacos/services/: __init__.py  images.py
src/web/: .cta.json  README.md  index.html  package.json  vite.config.ts
src/web/src/: styles.css
src/web/src/components/: Header.tsx  PhotosTable.tsx
src/web/src/components/ui/: button.tsx  card.tsx
src/web/src/lib/: api.ts  hooks.ts
src/web/src/routes/: index.tsx
tests/: test_foo.py
